--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ iframe{
    position: absolute;
    display: flex;
    justify-content: center;
-   left:490px;
+   left:493px;
    color: blueviolet;
    visibility: hidden;
    font-family:Arial, Helvetica, sans-serif;
@@ -35,34 +35,37 @@ iframe{
 }
 #Hello img{
    top:0px;
-   height: 250px;
-   width: 200%;
-   right:160px;
+   height: 380px;
+   right:279px;
    position: relative;
    animation: mymove 2s infinite;
+   width: 700px;
+   
 }
 
 
  @keyframes mymove {
   from {top: 0px;}
-  to {top: 150px;}
+  to {top: 140px;}
 }
 
 #Goodbye{
    position: absolute;
-   font-size: 70px;
+   font-size: 80px;
    display: flex;
    justify-content: center;
-   left:560px;
+   left:558px;
    max-width: 20px;
    visibility: hidden;
 }
 
 #Goodbye img{
    top:0px;
-   height: 250px;
+   height: 376px;
    position: relative;
    animation: mymove 2s infinite;
+   width: 700px;
+   
 }
 
 .btn1{
