--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-.container{
+.container {
    position: relative;
    width: 1140px;
    margin: 0 auto;
@@ -9,7 +9,7 @@
    bottom: 0px;
 }
 
-iframe{
+iframe {
    position: absolute;
    display: flex;
    align-content: center;
@@ -22,26 +22,17 @@ iframe{
    height: 500px;
 }
    
-#Hello{
+#Hello {
    top:0px;
    position: absolute;
    display: flex;
    justify-content: center;
-   left:493px;
-   color: blueviolet;
    visibility: hidden;
    font-family:Arial, Helvetica, sans-serif;
-   
-}
-#Hello img{
-   top:0px;
-   height: 380px;
-   right:279px;
-   position: relative;
    animation: mymove 2s infinite;
-   width: 700px;
-   
 }
+
+
 
 
  @keyframes mymove {
@@ -49,7 +40,7 @@ iframe{
   to {top: 140px;}
 }
 
-#Goodbye{
+#Goodbye {
    position: absolute;
    font-size: 80px;
    display: flex;
@@ -59,7 +50,7 @@ iframe{
    visibility: hidden;
 }
 
-#Goodbye img{
+#Goodbye img {
    top:0px;
    height: 376px;
    position: relative;
@@ -93,7 +84,7 @@ iframe{
    background: transparent;
 
 }
-.btnY{
+.btnY {
    position: absolute;
    top: 18%;
    left: 60%;
@@ -106,7 +97,7 @@ iframe{
    background: transparent;
 }
 
-.btnB{
+.btnB {
    position: absolute;
    top: 28%;
    left: 62.5%;
@@ -119,7 +110,7 @@ iframe{
    background: transparent;
 
 }
-.btnA{
+.btnA {
    position: absolute;
    top: 37%;
    left: 60%;
@@ -163,5 +154,13 @@ iframe{
 
 .bi{
    color: rgb(179, 167, 167);
+}
+
+.visible {
+   visibility: visible;
+}
+
+.hidden {
+   visibility: hidden;
 }
 
